Fix hiding elements on mobile

--- a/discordfx/styles/discord.css
+++ b/discordfx/styles/discord.css
@@ -551,16 +551,11 @@ code
     float: right;
 }
 
-.mobile-hide 
-{
-    visibility: hidden;
-}
-
-@media (min-width: 1024px) 
+@media (max-width: 1023.98px) 
 {
     .mobile-hide 
     {
-        visibility: visible;
+        display: none;
     }
 }
 
